--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>ISP 2018</title>
+		<title>Starbucks Locations in the US/title>
 		<script type="text/javascript" src="../d3.js"></script>
 		<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 		<script src="https://d3js.org/topojson.v2.min.js"></script>
