--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>ISP 2018</title>
+		<link rel="shortcut icon" href="starbucks.ico"/> 
 		<script type="text/javascript" src="../d3.js"></script>
 		<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 		<script src="https://d3js.org/topojson.v2.min.js"></script>
