--- a/index.html
+++ b/index.html
@@ -741,21 +741,21 @@
           <li>
             <i class="fa-li fas fa-graduation-cap"></i>
             <div class="description">
-              <p class="course">Ph.D. in Computer Science, 2024</p>
+              <p class="course">Ph.D. in Computer Science | 2024</p>
               <p class="institution">Washington University in St. Louis</p>
             </div>
           </li>
           <li>
             <i class="fa-li fas fa-graduation-cap"></i>
             <div class="description">
-              <p class="course">M.S. in Computer Science, 2023</p>
+              <p class="course">M.S. in Computer Science | 2023</p>
               <p class="institution">Washington University in St. Louis</p>
             </div>
           </li>
           <li>
             <i class="fa-li fas fa-graduation-cap"></i>
             <div class="description">
-              <p class="course">B.A. in Computer Science, 2019</p>
+              <p class="course">B.A. in Computer Science | 2019</p>
               <p class="institution">New College of Florida</p>
             </div>
           </li>
