--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
     
     <h1>About Me</h1>
 
-    <p>I am curerently a 4th year Ph.D. candidate at Washington University in St. Louis, advised by Dr. Alvitta Ottley. My research interests are in Visual Analytics and Human-Computer Interaction. More specifically, my current research is in the area of Analytic Provenance, where the belief is that monitoring low-level behavioral data of users can enable real-time prediction of users&rsquo; high-level goals. Understanding and modeling user interactions can provide critical insights that will facilitate the design of new or improved methods to support users in data exploration. My work focuses on leveraging user interactions to develop an intelligent visual exploration system with an ML agent that will assist users in real-time while they interact with an interface/data visualizations.</p>
+    <p>I am currently a 4th year Ph.D. candidate at Washington University in St. Louis, advised by Dr. Alvitta Ottley. My research interests are in Visual Analytics and Human-Computer Interaction. More specifically, my current research is in the area of Analytic Provenance, where the belief is that monitoring low-level behavioral data of users can enable real-time prediction of users&rsquo; high-level goals. Understanding and modeling user interactions can provide critical insights that will facilitate the design of new or improved methods to support users in data exploration. My work focuses on leveraging user interactions to develop an intelligent visual exploration system with an ML agent that will assist users in real-time while they interact with an interface/data visualizations.</p>
 
 
     <div class="row">
