--- a/starbucks/map.html
+++ b/starbucks/map.html
@@ -4,9 +4,9 @@
 		<meta charset="utf-8">
 		<title>ISP 2018</title>
 		<link rel="shortcut icon" href="starbucks.ico"/> 
-		<script type="text/javascript" src="d3.js"></script>
-		<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-		<script src="https://d3js.org/topojson.v2.min.js"></script>
+		<script src="https://d3js.org/d3.v7.js"></script>
+		<script src="https://d3js.org/d3-scale-chromatic.v3.min.js"></script>
+		<script src="https://d3js.org/topojson.v3.min.js"></script>
 		<style type="text/css">
 			/* Legend Font Style */
 			body {
@@ -40,8 +40,8 @@
 		<script type="text/javascript">
 
 			//Width and height
-			var w = 960;
-			var h = 600;
+			var w = 1080;
+			var h = 800;
 
 			var x = d3.scaleLinear()
 				.domain([0.1, 1.0])
@@ -74,7 +74,7 @@
 			// Creating the lengend
 			var g = svg.append("g")
 				.attr("class", "key")
-				.attr("transform", "translate(0,30)");
+				.attr("transform", "translate(0,100)");
 			
 				g.selectAll("rect")
 					.data(color.range().map(function(d) {
@@ -108,7 +108,7 @@
 					.remove();
 
 			//Load in Starbucks data
-			d3.csv("final-starbucks-us.csv", function(data) {
+			d3.csv("final-starbucks-us.csv").then(function(data) {
 				var dataArray = [];
 				for (var d = 0; d < data.length; d++) {
 					dataArray.push(parseFloat(data[d].value))
@@ -117,7 +117,7 @@
 				var maxVal = d3.max(dataArray)
 
 				//Load in GeoJSON data
-				d3.json("us-states.json", function(json) {
+				d3.json("us-states.json").then(function(json) {
 
 					//Merge the data and GeoJSON
 					//Loop through once for each ag. data value
@@ -167,37 +167,37 @@
 					   });
 
 					// Map the cities 
-					d3.csv("starbucks-cities.csv", function(data){
+					d3.csv("starbucks-cities.csv").then(function(data){
 						svg.selectAll("circle")
-						.data(data)
-						.enter()
-						.append("circle")
-						.attr("cx", function(d){
-							return projection([d.long, d.lat])[0];
-						})
-						.attr("cy", function(d){
-							return projection([d.long, d.lat])[1];
-						})
-						.attr("r", function(d){
-							return Math.sqrt(d.value)* 0.95;
-						})
-						.style("fill", "rgb(127, 198, 164)")
-						.style("opacity", 0.75)
-						.on("mouseover", function(d) {      
-							div.transition()        
-							.duration(200)      
-							.style("opacity", .9);      
-							div.text(d.city + ", " + d.value)
-							.style("left", (d3.event.pageX) + "px")     
-							.style("top", (d3.event.pageY - 28) + "px");    
-						})   
+							.data(data)
+							.enter()
+							.append("circle")
+							.attr("cx", function(d){
+								return projection([d.long, d.lat])[0];
+							})
+							.attr("cy", function(d){
+								return projection([d.long, d.lat])[1];
+							})
+							.attr("r", function(d){
+								return Math.sqrt(d.value)* 0.95;
+							})
+							.style("fill", "rgb(127, 198, 164)")
+							.style("opacity", 0.75)
+							.on("mouseover", function(e, d) {      
+								div.transition()        
+									.duration(100)      
+									.style("opacity", .9);      
+								div.text(d.city + ", " + d.value)
+									.style("left", (e.pageX) + "px")     
+									.style("top", (e.pageY - 28) + "px");    
+							})   
 
-						// fade out tooltip on mouse out               
-						.on("mouseout", function(d) {       
-							div.transition()        
-							.duration(500)      
-							.style("opacity", 0);   
-						});
+							// fade out tooltip on mouse out               
+							.on("mouseout", function(e, d) {       
+								div.transition()        
+									.duration(500)      
+									.style("opacity", 0);   
+							});
 					});
 				});
 			});
